<resources>
    <string name="app_name">UiSample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_favorite_fruit">选择你喜欢的水果</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>
    <string name="play_text">播放</string>
    <string name="viewpager_example_1">ViewPager使用示例1</string>
    <string name="viewpager_example_2">ViewPager使用示例2</string>
    <string name="viewpager_example_3">ViewPager使用示例3</string>
    <string name="viewpager_example_4">ViewPager使用示例4</string>
    <string name="pager_title_strip_example">PagerTitleStrip效果演示</string>
    <string name="tab_line">tab指示条</string>
    <string name="button">按钮</string>
    <string name="button_unable">按钮不可用</string>
    <string name="show_normal_dialog">显示普通对话框</string>
    <string name="show_normal_list_dialog">显示普通列表对话框</string>
    <string name="show_single_selection_list_dialog">显示单选列表对话框</string>
    <string name="show_multiple_selection_list_dialog">显示多选列表对话框</string>
    <string name="show_custom_layout_dialog">显示自定义布局对话框</string>
    <string name="scroll_waiting_dialog">滚动等待对话框</string>
    <string name="progress_bar_dialog">进度条对话框</string>
    <string name="default_prompt_text">默认提示文本</string>
    <string name="hello_world">hello world</string>
    <string name="add">添加</string>
    <string name="statically_load_Fragment">静态加载Fragment</string>
    <string name="load_fragment_dynamically">动态加载Fragment</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="china">中国</string>
    <string name="content_description">contentDescription</string>
    <string name="options_menu_color_by_top_bar">通过topBar里面的颜色设置选项菜单字体颜色</string>
    <string name="long_press_to_show_context_menu">长按显示上下文菜单</string>
    <string name="show_popupmenu_menu">显示PopupMenu菜单</string>
    <string name="show_notification_bar_notification">显示通知栏通知</string>
    <string name="turn_off_notifications_from_the_notification_bar">关闭通知栏通知</string>
    <string name="please_enter_sex">请选择性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="submit">提交</string>
    <string name="choose_the_fruit_you_like">选择你喜欢的水果</string>
    <string name="shadow_font">阴影字体</string>
    <string name="rectangular_border">矩形边框的</string>
    <string name="rounded_border">圆角边框</string>
    <string name="display_image">显示图片</string>
    <string name="sina">新浪</string>
    <string name="qr_code">二维码</string>
    <string name="www_sina_com_cn">www.sina.com.cn</string>
    <string name="gov">德政府警告贸易战风险 敦促美国勿走“错误道路”</string>
    <string name="normal">普通</string>
    <string name="customize_toast">自定义TOAST</string>
    <string name="activated">已开启</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="system_setting">系统设置</string>
    <string name="display_setting">显示设置</string>
    <string name="internet_setting">网络设置</string>
    <string name="other_setting">其它设置</string>
    <string name="application">应用</string>
</resources>
