<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.water.uisample.RadioButtonActivity">
        <LinearLayout
            android:id="@+id/llRadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_sex"
                android:textSize="20sp"/>
            <!--切记，要为每个RadioButton添加一个id，不然单选功能会失效-->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--修改文字与选择框的距离（android:paddingLeft="20dp"）-->
                <RadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:checked="true"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <!--自定义点击效果（android:button="@drawable/check_button"）-->
                <RadioButton
                    android:id="@+id/rbWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box"
                    android:text="@string/woman"/>
                <!--改变文字与选择框的相对位置（android:button="@null"、
                android:drawableTop="@drawable/check_button"）-->
                <RadioButton
                    android:id="@+id/rbNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:gravity="center"
                    android:drawableTop="@drawable/radio_button"
                    android:text="@string/unknown"
                    android:padding="20dp"/>
            </RadioGroup>
            <!--通过单击按钮获取选中单选按钮的值-->
            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>
            <CheckBox
                android:id="@+id/cbOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
            <!--自定义按钮-->
            <CheckBox
                android:id="@+id/cbTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/check_box"
                android:text="@string/app_name"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>