<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.water.uisample.BottomViewPagerActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rgTabBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbChannel"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_channel"
                android:text="@string/tab_menu_alert"
                android:tag="0"/>
            <RadioButton
                android:id="@+id/rbMessage"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_message"
                android:text="@string/tab_menu_profile"
                android:tag="1"/>
            <RadioButton
                android:id="@+id/rbBetter"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_better"
                android:text="@string/tab_menu_pay"
                android:tag="2"/>
            <RadioButton
                android:id="@+id/rbSetting"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_setting"
                android:text="@string/tab_menu_setting"
                android:tag="3"/>
        </RadioGroup>

        <View
            android:id="@+id/divTabBar"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@id/rgTabBar"
            android:background="@color/tab_menu_bg" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vpContainter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/divTabBar"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
