<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.water.uisample.ToggleButtonActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
            <!-- 文本展示 -->
            <TextView
                android:id="@+id/tvSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activated"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <!-- 定义ToggleButton对象 -->
            <ToggleButton
                android:id="@+id/tglSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/toggle_button"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn="" />
            <!--自定义track和thumb的Switch-->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swState"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:switchMinWidth="20dp"
                android:textOn="@string/open"
                android:textOff="@string/close"
                android:showText="true"
                android:thumb="@drawable/switch_thumb_selector"
                android:track="@drawable/switch_track_selector" />

            <!-- 不设置任何属性的Switch -->
            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>