<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.water.uisample.TextViewActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <!--显示带阴影文字-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="#00ff4c"
                    android:shadowRadius="1"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:text="@string/shadow_font"
                    android:textColor="#5fa8cc"
                    android:textSize="30sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <!--添加XML矩形、圆角矩形边框-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtOne"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@drawable/rect_border"
                    android:text="@string/rectangular_border" />
                <TextView
                    android:id="@+id/txtTwo"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@drawable/circle_rect_border"
                    android:text="@string/rounded_border" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <!--添加XML图片-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvShowImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/display_image"
                    android:textSize="20sp"
                    app:drawableTopCompat="@mipmap/ic_close"
                    app:drawableLeftCompat="@drawable/left"
                    app:drawableRightCompat="@drawable/right"
                    app:drawableBottomCompat="@drawable/below" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/sina"
                    android:textSize="11sp"
                    android:padding="5dp"
                    app:drawableTopCompat="@drawable/above" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/qr_code"
                    android:textSize="11sp"
                    android:padding="5dp"
                    app:drawableTopCompat="@drawable/left" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <!--添加文字链接-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvShowUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/www_sina_com_cn"
                    android:autoLink="web"
                    android:textSize="11sp"
                    app:drawableTopCompat="@drawable/above" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <!--添加HTML文本-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvSina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/sina"
                    android:textSize="20sp"
                    app:drawableTopCompat="@drawable/above" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c9c6c6"/>
            <!--跑马灯-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tvMarquee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/gov"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>