<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.water.uisample.EditViewActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <!--文本提示-->
            <EditText
                android:id="@+id/etHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_prompt_text"
                android:textColorHint="#95A1AA"
                android:autofillHints=""
                android:inputType="text" />
            <!--获得焦点后全选组件内所有文本内容-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_prompt_text"
                android:selectAllOnFocus="true"
                android:autofillHints=""
                android:inputType="text" />
            <!--限制EditText输入类型-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/phone"
                android:inputType="phone"
                android:autofillHints="" />
            <!--设置最小行，最多行，单行，多行，自动换行-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:maxLines="3"
                android:singleLine="false"
                android:autofillHints=""
                android:inputType="text" />
            <!--设置文字间隔，设置英文字母大写类型-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textScaleX="1.5"
                android:inputType="textCapSentences"
                android:text="@string/hello_world"
                android:autofillHints="" />
            <!--控制EditText四周的间隔距离与内部文字与边框间的距离-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:text="@string/hello_world"
                android:autofillHints=""
                android:inputType="text" />
            <!--带表情的EditText-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/etExpression"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:inputType="text" />
                <Button
                    android:id="@+id/btnAddExpression"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"/>
            </LinearLayout>
            <!--带删除按钮的EditText-->
            <com.water.uisample.widget.ClearEditText
                android:id="@+id/etWithClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>